<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 登录 -->
    <string name="app_name">漫吧</string>
    <string name="login">登录</string>
    <string name="reset">重置密码</string>
    <string name="regist">注册</string>
    <string name="regist_now">马上注册 ></string>
    <string name="login_num">请输入手机号</string>
    <string name="login_pwd">请输入密码</string>
    <!--<string name="login_pwd">请输入6-16位数字密码</string>-->
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_reset_pwd">重置密码</string>
    <string name="login_thrid">其他登录方式</string>
    <string name="login_weixin">微信</string>
    <string name="login_qq">QQ</string>
    <string name="login_xinlang">微博</string>
    <string name="login_resetpwd_success">已成功修改密码，请重新登录</string>
    <string name="login_user_not_exist">用户不存在，请先注册</string>

    <!-- 注册 -->
    <string name="forget_password">忘记密码</string>
    <string name="regist_nicheng">输入昵称</string>
    <string name="regist_phone">输入手机号</string>
    <string name="regist_yanzhengma">验证码</string>
    <string name="regist_getyanzhengma">获取验证码</string>
    <string name="reget_sms_code_countdown">重新发送(%s)</string>
    <string name="regist_mima">设置密码：6-16位字母数字组合</string>
    <string name="regist_man">男</string>
    <string name="regist_woman">女</string>
    <string name="regist_lingyu">兴趣</string>
    <string name="regist_dongman">动漫</string>
    <string name="regist_manhua">漫画</string>
    <string name="regist_youxi">游戏</string>
    <string name="regist_xiaoshuo">小说</string>
    <string name="regist_cosplay">cosplay</string>
    <string name="regist_tongren">同人</string>
    <string name="regist_finish">开启</string>
    <string name="regist_finish_third">开启漫吧之旅</string>
    <string name="regist_welcome">欢迎来到漫吧</string>
    <string name="regist_binding_phone">请绑定手机号</string>

    <string name="home">首页</string>
    <string name="home_jiequ">街区</string>
    <string name="home_xiaoxi">消息</string>
    <string name="home_favorite">收藏</string>
    <string name="home_fayan">发言</string>
    <!--<string name="home_gonghui">公会</string>-->
    <string name="home_gonghui">专区</string>
    <string name="home_jia">我</string>

    <string name="home_xinxian">新鲜</string>
    <string name="home_remen">热门</string>
    <string name="home_guanzhu">关注</string>
    <string name="home_guanzhu_done">已关注</string>

    <!-- 设置界面 -->
    <string name="my_fensi">粉丝</string>
    <string name="my_guanzhu">关注</string>
    <string name="my_gonghui">我的专区</string>
    <string name="my_qianbao">我的钱包</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="my_dongtai">我的动态</string>
    <string name="my_xiaoxi">消息</string>
    <string name="my_haiwan">嗨玩</string>
    <string name="my_shezhi">设置</string>
    <string name="my_login">欢迎来到漫吧</string>
    <string name="fans_member_list">粉丝列表</string>
    <string name="follow_member_list">关注列表</string>

    <!-- 专区 -->
    <string name="gonghui_hot">热门专区</string>
    <string name="gonghui_join">加入</string>
    <string name="gonghui_dongtai">动态(%s)</string>
    <string name="gonghui_chengyuan">成员(%s)</string>
    <string name="gonghui_shenqingjiaru">申请加入</string>
    <string name="gonghui_exit">退出专区</string>
    <string name="gonghui_loadmore">上拉加载更多...</string>
    <string name="gonghui_loading">正在加载...</string>

    <string name="test_more">22222222222222222222222222222222222222222222222223333333333333333333333333333</string>

    <!--  主界面   -->
    <string name="back_launcher">再按一次退出</string>
    <string name="home_pass">跳过 %s</string>


    <!--  个人主页   -->
    <string name="person_pick">撩一下</string>
    <string name="person_guanzhu">关注</string>
    <string name="person_gallery">相册</string>
    <string name="person_dongtai">最近动态</string>
    <string name="person_empty">暂未发布图片</string>
    <string name="person_show_all">查看更多动态</string>
    <string name="person_all_dongtai">TA的动态</string>

    <!--  动态详情界面   -->
    <string name="detail_title">动态详情</string>
    <string name="detail_right">分享</string>
    <string name="detail_send">发送</string>
    <string name="detail_send_hint">说点什么...</string>
    <string name="comment_floor">%s楼</string>
    <string name="comment_number">全部评论（%s）</string>
    <string name="comment_empty">暂无评论，抢占沙发！</string>
    <string name="comment_detail_title">评论详情</string>
    <string name="comment_more_reply">%s回复</string>
    <string name="comment_sort_zheng">正序查看</string>
    <string name="comment_sort_dao">倒序查看</string>
    <string name="comment_sort_hot">热门评论</string>
    <string name="comment_sort_normal">回复</string>
    <string name="comment_pub">评论</string>
    <string name="detail_upvote_list">点赞列表</string>



    <!--  专区界面   -->
    <string name="guild_liveness">活跃度: %s</string>
    <string name="guild_zone_num">动态数: %s</string>
    <string name="gonghui_member_num" formatted="false">成员数：%s</string>

    <!--  专区详情   -->
    <string name="guild_detail_member_num">成员数：%s</string>

    <!--  查看图片界面   -->
    <string name="image_sendto_friend">发送给好友</string>
    <string name="image_save">保存图片</string>
    <string name="image_cancel">取消</string>

    <!--   游戏中心界面   -->
    <string name="game_title">游戏中心</string>
    <string name="game_tuijian">今日推荐</string>
    <string name="game_jingpin">精品排行</string>

    <string name="game_detail_install">安装</string>
    <string name="game_detail_jianjie">简介</string>
    <string name="game_detail_libao">礼包</string>

    <!--   设置界面   -->
    <string name="setting_notification">推送通知</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_common_qa">常见问题</string>
    <string name="setting_idea_fankui">意见反馈</string>
    <string name="setting_update_version">版本更新</string>
    <string name="setting_about_us">关于漫吧</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_app_version">V%s</string>
    <string name="setting_clear_cache_ornot">确定清除缓存吗？</string>
    <string name="setting_service_qq">客服QQ：2359972103</string>
    <string name="setting_service_qqgroup">官方群：608246150</string>
    <string name="setting_service_email">客服邮箱：yhservice@mymanba.com</string>

    <!-- 个人资料  -->
    <string name="setting_user_info">个人资料</string>
    <string name="setting_user_nickname">昵称</string>
    <string name="setting_user_sex">性别</string>
    <string name="setting_user_brithday">生日</string>
    <string name="setting_user_notset">未设置</string>
    <string name="setting_user_sign">个性签名</string>
    <string name="setting_input_hint">请输入昵称</string>
    <string name="setting_sing_hint">请输入签名</string>
    <string name="setting_save">保存</string>

    <!--   发布动态   -->
    <string name="fabu_title_hint">帖子标题（可选）</string>
    <string name="fabu_content_hint">请输入发布内容</string>
    <string name="fabu_dongtai">发帖</string>
    <string name="fabu_gonghui">发往专区（必选）</string>
    <string name="loading_up">正在发布...</string>
    <string name="fabu_publish">发布</string>

    <!--   公共   -->
    <string name="sorry_network_is_not_good">网络状况不佳</string>
    <string name="my_app_name">MY漫吧</string>
    <string name="my_app_desc">二次元同好聚集地</string>
    <string name="loading">正在加载中...</string>
    <string name="no_more">没有更多数据了</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="prompt">提示！</string>
    <string name="empty_text">暂无最新动态</string>
    <string name="no_more_2">人家也是有底线的</string>
    <string name="system_error">系统错误</string>
    <string name="input_password_error">您输入的密码不符合规范，请输入6-16位密码!</string>
    <string name="input_password_empty">密码不能为空</string>

</resources>
