<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sort_zheng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_to_side"
        android:gravity="center"
        android:text="@string/comment_sort_zheng"
        android:textColor="@color/colorCommon"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_line_color"/>

    <TextView
        android:id="@+id/tv_sort_dao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_to_side"
        android:gravity="center"
        android:text="@string/comment_sort_dao"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_line_color"/>

    <TextView
        android:id="@+id/tv_sort_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_to_side"
        android:gravity="center"
        android:text="@string/comment_sort_hot"/>

</LinearLayout>