<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.minyou.manba.ui.ActionTitleView
        android:id="@+id/atv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"></com.minyou.manba.ui.ActionTitleView>

    <EditText
        android:id="@+id/login_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_num_side"
        android:layout_marginRight="@dimen/login_num_side"
        android:layout_marginTop="@dimen/common_to_top"
        android:hint="@string/login_num"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/common_to_top"
        android:layout_marginLeft="@dimen/display_password"
        android:layout_marginRight="@dimen/regist_padding_to_side"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:hint="@string/regist_yanzhengma" />
        <TextView
            android:id="@+id/tv_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shape_borderline_bluefull"
            android:textColor="@android:color/white"
            android:text="@string/regist_getyanzhengma"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/display_password"
        android:layout_marginRight="@dimen/display_password"
        android:background="@drawable/shape_borderline_bluefull"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:text="@string/regist_finish_third" />

</LinearLayout>