<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_icon_top"
            android:src="@drawable/tab_icon_home_pre" />

        <EditText
            android:id="@+id/login_number"
            android:inputType="phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_num_side"
            android:layout_marginRight="@dimen/login_num_side"
            android:layout_marginTop="@dimen/login_icon_top"
            android:hint="@string/login_num" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_num_side"
                android:layout_marginRight="@dimen/login_num_side"
                android:hint="@string/login_pwd"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cb_display_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/display_password"
                android:layout_centerVertical="true"
                android:button="@drawable/login_icon_checked"
                android:checked="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/login_num_side"
                android:text="@string/login_forget_pwd" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_num_side"
            android:background="@drawable/shape_borderline_bluefull"
            android:layout_marginLeft="@dimen/login_num_side"
            android:layout_marginRight="@dimen/login_num_side"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_thrid" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_num_side"
            android:layout_marginBottom="@dimen/login_num_side"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginRight="@dimen/login_num_side"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_icon_weixin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_weixin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_num_side"
                android:layout_marginRight="@dimen/login_num_side"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_icon_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_qq" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_xinlang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_num_side"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_icon_xinlang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_xinlang" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>