<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_msg_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/fabu_content_hint"
        android:textColor="#333333"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/et_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/fabu_content_hint"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/common_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_left_btn_bg_style"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/common_line_color" />

        <TextView
            android:id="@+id/tv_sure_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.01"
            android:background="@drawable/dialog_right_btn_bg_style"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>