<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/fabu_content_hint"
            android:textColor="#333333"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/et_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/fabu_content_hint"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textColorHint="#aaaaaa"
            android:textSize="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/common_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_btn_bg_style"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="11dp"
                android:paddingTop="11dp"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/common_line_color" />

            <TextView
                android:id="@+id/tv_sure_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.01"
                android:background="@drawable/dialog_right_btn_bg_style"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="11dp"
                android:paddingTop="11dp"
                android:text="@string/ok"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</layout>